[gd_scene load_steps=83 format=3 uid="uid://d0mn0prgj1gs5"]

[ext_resource type="Texture2D" uid="uid://dj7jmxu1ubvg6" path="res://art/character/survivalgame-player-green.png" id="1_8tmwr"]
[ext_resource type="Script" path="res://script/player.gd" id="1_nrwr5"]
[ext_resource type="Shader" path="res://shaders/player.gdshader" id="3_1qjku"]
[ext_resource type="PackedScene" uid="uid://vhfgbpafkxse" path="res://inventory/inventory_ui.tscn" id="4_d4xiu"]
[ext_resource type="Script" path="res://shaders/PlayerShader.gd" id="5_lgqy1"]
[ext_resource type="AudioStream" uid="uid://cuw5w8j7rb683" path="res://sounds/arrow.mp3" id="7_jv4bs"]
[ext_resource type="AudioStream" uid="uid://bf55l45o6cipa" path="res://sounds/male-scream-in-fear.mp3" id="8_23vgo"]
[ext_resource type="AudioStream" uid="uid://c25ja0hfql47c" path="res://sounds/inventory-grab.mp3" id="9_0b7pb"]
[ext_resource type="Script" path="res://addons/gloot/ui/ctrl_inventory_stacked.gd" id="9_v7y7g"]
[ext_resource type="Script" path="res://addons/gloot/core/inventory_stacked.gd" id="10_1e16a"]
[ext_resource type="Resource" uid="uid://c45uhadq0vieg" path="res://inventory/inventory_stacked.tres" id="11_4dxp5"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_6cy6m"]
shader = ExtResource("3_1qjku")

[sub_resource type="AtlasTexture" id="AtlasTexture_im3s2"]
atlas = ExtResource("1_8tmwr")
region = Rect2(448, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ueqkj"]
atlas = ExtResource("1_8tmwr")
region = Rect2(480, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ljvod"]
atlas = ExtResource("1_8tmwr")
region = Rect2(512, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ibue0"]
atlas = ExtResource("1_8tmwr")
region = Rect2(544, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_p3ccd"]
atlas = ExtResource("1_8tmwr")
region = Rect2(576, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_6c6qm"]
atlas = ExtResource("1_8tmwr")
region = Rect2(608, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_hqtk3"]
atlas = ExtResource("1_8tmwr")
region = Rect2(256, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_0oqv0"]
atlas = ExtResource("1_8tmwr")
region = Rect2(288, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_1dbyp"]
atlas = ExtResource("1_8tmwr")
region = Rect2(320, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_3i28b"]
atlas = ExtResource("1_8tmwr")
region = Rect2(352, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_d2muc"]
atlas = ExtResource("1_8tmwr")
region = Rect2(384, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_wmqt1"]
atlas = ExtResource("1_8tmwr")
region = Rect2(64, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_rfih1"]
atlas = ExtResource("1_8tmwr")
region = Rect2(96, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_be3yh"]
atlas = ExtResource("1_8tmwr")
region = Rect2(480, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_luhg2"]
atlas = ExtResource("1_8tmwr")
region = Rect2(480, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_fjxcw"]
atlas = ExtResource("1_8tmwr")
region = Rect2(480, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_nv2kf"]
atlas = ExtResource("1_8tmwr")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_bxmju"]
atlas = ExtResource("1_8tmwr")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_hklma"]
atlas = ExtResource("1_8tmwr")
region = Rect2(256, 128, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_e8hnd"]
atlas = ExtResource("1_8tmwr")
region = Rect2(288, 128, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_rcs3g"]
atlas = ExtResource("1_8tmwr")
region = Rect2(320, 128, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_1qiu5"]
atlas = ExtResource("1_8tmwr")
region = Rect2(352, 128, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_4ekih"]
atlas = ExtResource("1_8tmwr")
region = Rect2(384, 128, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_hue30"]
atlas = ExtResource("1_8tmwr")
region = Rect2(64, 128, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_q3t4u"]
atlas = ExtResource("1_8tmwr")
region = Rect2(96, 128, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_coqii"]
atlas = ExtResource("1_8tmwr")
region = Rect2(256, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_uwtg7"]
atlas = ExtResource("1_8tmwr")
region = Rect2(288, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_n6sqh"]
atlas = ExtResource("1_8tmwr")
region = Rect2(320, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_bkb2u"]
atlas = ExtResource("1_8tmwr")
region = Rect2(352, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_nxnu0"]
atlas = ExtResource("1_8tmwr")
region = Rect2(384, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_tyv6l"]
atlas = ExtResource("1_8tmwr")
region = Rect2(64, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_v81g2"]
atlas = ExtResource("1_8tmwr")
region = Rect2(96, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_7ix8x"]
atlas = ExtResource("1_8tmwr")
region = Rect2(256, 160, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_43mqr"]
atlas = ExtResource("1_8tmwr")
region = Rect2(288, 160, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_jynue"]
atlas = ExtResource("1_8tmwr")
region = Rect2(320, 160, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_45vm6"]
atlas = ExtResource("1_8tmwr")
region = Rect2(352, 160, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_itsdb"]
atlas = ExtResource("1_8tmwr")
region = Rect2(384, 160, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_72sox"]
atlas = ExtResource("1_8tmwr")
region = Rect2(64, 160, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_x7j5h"]
atlas = ExtResource("1_8tmwr")
region = Rect2(96, 160, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_4kt1l"]
atlas = ExtResource("1_8tmwr")
region = Rect2(256, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_kqxhk"]
atlas = ExtResource("1_8tmwr")
region = Rect2(288, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_plohc"]
atlas = ExtResource("1_8tmwr")
region = Rect2(320, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_qsay5"]
atlas = ExtResource("1_8tmwr")
region = Rect2(352, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_6slpg"]
atlas = ExtResource("1_8tmwr")
region = Rect2(384, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_vuj1n"]
atlas = ExtResource("1_8tmwr")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_rvd1r"]
atlas = ExtResource("1_8tmwr")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_78lb6"]
atlas = ExtResource("1_8tmwr")
region = Rect2(256, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_m1eoi"]
atlas = ExtResource("1_8tmwr")
region = Rect2(288, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_eobm4"]
atlas = ExtResource("1_8tmwr")
region = Rect2(320, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_xqwrr"]
atlas = ExtResource("1_8tmwr")
region = Rect2(352, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_g6c74"]
atlas = ExtResource("1_8tmwr")
region = Rect2(384, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_skftp"]
atlas = ExtResource("1_8tmwr")
region = Rect2(64, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_em6j7"]
atlas = ExtResource("1_8tmwr")
region = Rect2(96, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_a0t4k"]
atlas = ExtResource("1_8tmwr")
region = Rect2(256, 224, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_shbw1"]
atlas = ExtResource("1_8tmwr")
region = Rect2(288, 224, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_3d12v"]
atlas = ExtResource("1_8tmwr")
region = Rect2(320, 224, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_mnwu8"]
atlas = ExtResource("1_8tmwr")
region = Rect2(352, 224, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_gx8gf"]
atlas = ExtResource("1_8tmwr")
region = Rect2(384, 224, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_hbx4w"]
atlas = ExtResource("1_8tmwr")
region = Rect2(64, 224, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ehfta"]
atlas = ExtResource("1_8tmwr")
region = Rect2(96, 224, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_rerba"]
atlas = ExtResource("1_8tmwr")
region = Rect2(256, 192, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_chyxv"]
atlas = ExtResource("1_8tmwr")
region = Rect2(288, 192, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_fe4dn"]
atlas = ExtResource("1_8tmwr")
region = Rect2(320, 192, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_t87qp"]
atlas = ExtResource("1_8tmwr")
region = Rect2(352, 192, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_7w84f"]
atlas = ExtResource("1_8tmwr")
region = Rect2(384, 192, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_kgf1r"]
atlas = ExtResource("1_8tmwr")
region = Rect2(64, 192, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_kjv0q"]
atlas = ExtResource("1_8tmwr")
region = Rect2(96, 192, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_yegt0"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_im3s2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ueqkj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ljvod")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ibue0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_p3ccd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6c6qm")
}],
"loop": false,
"name": &"death",
"speed": 6.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_hqtk3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0oqv0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1dbyp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3i28b")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d2muc")
}],
"loop": true,
"name": &"e-attack",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_wmqt1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rfih1")
}],
"loop": true,
"name": &"e-walk",
"speed": 4.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_be3yh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_luhg2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fjxcw")
}],
"loop": true,
"name": &"hit",
"speed": 3.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_nv2kf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bxmju")
}],
"loop": true,
"name": &"idle",
"speed": 4.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_hklma")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_e8hnd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rcs3g")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1qiu5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4ekih")
}],
"loop": true,
"name": &"n-attack",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_hue30")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_q3t4u")
}],
"loop": true,
"name": &"n-walk",
"speed": 4.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_coqii")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uwtg7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_n6sqh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bkb2u")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nxnu0")
}],
"loop": true,
"name": &"ne-attack",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_tyv6l")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_v81g2")
}],
"loop": true,
"name": &"ne-walk",
"speed": 4.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_7ix8x")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_43mqr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jynue")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_45vm6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_itsdb")
}],
"loop": true,
"name": &"nw-attack",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_72sox")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x7j5h")
}],
"loop": true,
"name": &"nw-walk",
"speed": 4.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_4kt1l")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kqxhk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_plohc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qsay5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6slpg")
}],
"loop": true,
"name": &"s-attack",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_vuj1n")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rvd1r")
}],
"loop": true,
"name": &"s-walk",
"speed": 4.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_78lb6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_m1eoi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_eobm4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xqwrr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_g6c74")
}],
"loop": true,
"name": &"se-attack",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_skftp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_em6j7")
}],
"loop": true,
"name": &"se-walk",
"speed": 4.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_a0t4k")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_shbw1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3d12v")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mnwu8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gx8gf")
}],
"loop": true,
"name": &"sw-attack",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_hbx4w")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ehfta")
}],
"loop": true,
"name": &"sw-walk",
"speed": 4.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_rerba")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_chyxv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fe4dn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_t87qp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7w84f")
}],
"loop": true,
"name": &"w-attack",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_kgf1r")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kjv0q")
}],
"loop": true,
"name": &"w-walk",
"speed": 4.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_tjdb2"]
radius = 6.0

[sub_resource type="CircleShape2D" id="CircleShape2D_8w5i5"]

[node name="Player" type="CharacterBody2D"]
script = ExtResource("1_nrwr5")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
y_sort_enabled = true
material = SubResource("ShaderMaterial_6cy6m")
sprite_frames = SubResource("SpriteFrames_yegt0")
animation = &"idle"
script = ExtResource("5_lgqy1")

[node name="CollisonShape2D" type="CollisionShape2D" parent="."]
z_index = 11
y_sort_enabled = true
position = Vector2(0, 1)
shape = SubResource("CircleShape2D_tjdb2")

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2(2.5, 2.5)
limit_left = -1120
limit_top = -476
limit_right = 1276
limit_bottom = 2700

[node name="Inventory_UI" parent="." instance=ExtResource("4_d4xiu")]
z_index = 20
y_sort_enabled = true
offset_left = -41.0
offset_top = -76.0
offset_right = 42.0
offset_bottom = -14.0

[node name="Marker2D" type="Marker2D" parent="."]

[node name="hurtBox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="hurtBox"]
shape = SubResource("CircleShape2D_8w5i5")

[node name="hurtTimer" type="Timer" parent="hurtBox"]

[node name="hungerTimer" type="Timer" parent="."]
wait_time = 60.0
autostart = true

[node name="thirstTimer" type="Timer" parent="."]
wait_time = 45.0
autostart = true

[node name="ArrowAudio" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("7_jv4bs")
volume_db = -8.157

[node name="PlayerDying" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("8_23vgo")
volume_db = -5.098

[node name="PickItem" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("9_0b7pb")

[node name="CtrlInventoryStacked" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = 45.0
offset_top = -77.0
offset_right = 166.0
offset_bottom = 22.0
script = ExtResource("9_v7y7g")
inventory_path = NodePath("../InventoryStacked")

[node name="InventoryStacked" type="Node" parent="."]
script = ExtResource("10_1e16a")
capacity = 200.0
item_protoset = ExtResource("11_4dxp5")

[connection signal="timeout" from="hungerTimer" to="." method="_on_hunger_timer_timeout"]
[connection signal="timeout" from="thirstTimer" to="." method="_on_thirst_timer_timeout"]
